Update homepage text and improve styles for better user experience

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </header>
         <section class="home" id="home">
             <div class="home-text">
-                <h1>Everything you need <br>from <span>A to Z</span></h1>
-                <p>Lorem ipsum dolor sit amet,<br> sed do eiusmod tempor incididunt.</p>
+                <h1>Your Dream Car <br>Awaits <span>Here</span></h1>
+                <p>Discover the best deals on the latest models. <br> Drive your dream car today!</p>
                 <a href="#" class="btn">Discover More</a>
             </div>
         </section>
@@ -49,7 +49,7 @@
             <div class="heading">
                 <span>All Cars</span>
                 <h2>We have a wide variety of vehicles</h2>
-                <p>Lorem ipsum dolor sit amet, <br>adipiscing elit,<br> sed do eiusmod tempor incididunt.</p>
+                <p>Explore our extensive collection of cars <br>from top brands at unbeatable prices.</p>
             </div>
             <div class="cars-container container">
                 <div class="box">
@@ -91,8 +91,8 @@
                 <div class="about-us-text">
                     <h1><span>About Us</span></h1>
                     <h2>Come learn more about <br> the team and the dealership</h2>
-                    <p>Lorem ipsum dolor sit amet. A dolore assumenda eum omnis temporibus eum sint illo sed nemo porro.
-                    </p>
+                    <p>At CarWorld, we are dedicated to providing the best service and the finest vehicles. Our team is
+                        here to help you find the perfect car.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="about-us-img">
@@ -103,8 +103,8 @@
         <section class="services" id="services">
             <div class="heading">
                 <span>We offer a wide range of services</span>
-                <h2>Have peace of mind with our world class mechanics</h2>
-                <p>Ut quia minima in perferendis distinctio non molestiae labore, Et mollitia ipsa cum deleniti. </p>
+                <h2>Have peace of mind with our world-class mechanics</h2>
+                <p>Our expert team provides comprehensive services to keep your vehicle in top condition.</p>
             </div>
             <div class="services-container container">
                 <div class="box">
@@ -153,32 +153,31 @@
             <div class="heading">
                 <span>Our Rentals</span>
                 <h2>See what we have to offer</h2>
-                <p>Etiam molestie convallis ex, ut lacinia libero efficitur ac. Fusce et neque blandit, elementum orci
-                    a, suscipit erat.</p>
+                <p>Check out our wide range of rental vehicles available for your needs.</p>
             </div>
             <div class="rental-container container">
                 <div class="box">
                     <img src="img/rental1.png" alt="Truck Rental">
                     <h3>Trucks</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Reliable and spacious trucks for all your transport needs.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
                     <img src="img/rental2.png" alt="Car Rental">
                     <h3>Cars</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Comfortable and stylish cars for every journey.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
                     <img src="img/rental3.png" alt="Mini Van Rental">
                     <h3>Mini Vans</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Spacious and convenient mini vans for family trips.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
                     <img src="img/rental4.png" alt="Motorcycle Rental">
                     <h3>Motorcycles</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Exciting and agile motorcycles for adventurous rides.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
             </div>
