style: Update about us section for responsive design

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="about-us container" id="about-us">
-            <div style="display: flex; align-items: center;">
+            <div style="display: flex; align-items: center;" class="about-us-wrap">
                 <div class="about-us-text">
                     <h1><span>About Us</span></h1>
                     <h2>Come learn more about <br> the team and the dealership</h2>
