--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
             <div class="cars-container container">
                 <div class="box">
                     <h2>BMW</h2>
-                    <img src="img/car1.jpg" alt="BMW Car">
+                    <img src="img/car1.webp" alt="BMW Car">
                 </div>
                 <div class="box">
                     <h2>Opel</h2>
-                    <img src="img/car2.jpg" alt="Opel Car">
+                    <img src="img/car2.webp" alt="Opel Car">
                 </div>
                 <div class="box">
                     <h2>Tesla</h2>
-                    <img src="img/car3.jpg" alt="Tesla Car">
+                    <img src="img/car3.webp" alt="Tesla Car">
                 </div>
                 <div class="box">
                     <h2>Porsche</h2>
-                    <img src="img/car4.jpg" alt="Porsche Car">
+                    <img src="img/car4.webp" alt="Porsche Car">
                 </div>
                 <div class="box">
                     <h2>Mercedes</h2>
-                    <img src="img/car5.jpg" alt="Mercedes Car">
+                    <img src="img/car5.webp" alt="Mercedes Car">
                 </div>
                 <div class="box">
                     <h2>Jaguar</h2>
-                    <img src="img/car7.jpg" alt="Jaguar Car">
+                    <img src="img/car7.webp" alt="Jaguar Car">
                 </div>
                 <div class="box">
                     <h2>Lexus</h2>
-                    <img src="img/car8.jpg" alt="Lexus Car">
+                    <img src="img/car8.webp" alt="Lexus Car">
                 </div>
                 <div class="box">
                     <h2>Toyota</h2>
-                    <img src="img/car9.jpg" alt="Toyota Car">
+                    <img src="img/car9.webp" alt="Toyota Car">
                 </div>
             </div>
         </section>
@@ -108,7 +108,7 @@
             </div>
             <div class="services-container container">
                 <div class="box">
-                    <img src="img/part11.png" alt="Oil Change">
+                    <img src="img/part11.webp" alt="Oil Change">
                     <h3>Oil Change</h3>
                     <span>$39.99</span>
                     <i class='bx bx-star'>14 Reviews</i>
@@ -116,7 +116,7 @@
                     <a href="#" class="details">View Details</a>
                 </div>
                 <div class="box">
-                    <img src="img/part3.png" alt="Tire Change">
+                    <img src="img/part3.webp" alt="Tire Change">
                     <h3>Tire Change</h3>
                     <span>$99.99</span>
                     <i class='bx bx-star'>11 Reviews</i>
@@ -124,7 +124,7 @@
                     <a href="#" class="details">View Details</a>
                 </div>
                 <div class="box">
-                    <img src="img/part4.png" alt="Wheel Alignment">
+                    <img src="img/part4.webp" alt="Wheel Alignment">
                     <h3>Wheel Alignment</h3>
                     <span>$109.99</span>
                     <i class='bx bx-star'>6 Reviews</i>
@@ -132,7 +132,7 @@
                     <a href="#" class="details">View Details</a>
                 </div>
                 <div class="box">
-                    <img src="img/part5.png" alt="Safety Inspection">
+                    <img src="img/part5.webp" alt="Safety Inspection">
                     <h3>Safety Inspection</h3>
                     <span>$189.99</span>
                     <i class='bx bx-star'>4 Reviews</i>
@@ -140,7 +140,7 @@
                     <a href="#" class="details">View Details</a>
                 </div>
                 <div class="box">
-                    <img src="img/part6.png" alt="Car Wash">
+                    <img src="img/part6.webp" alt="Car Wash">
                     <h3>Car Wash</h3>
                     <span>$19.99</span>
                     <i class='bx bx-star'>24 Reviews</i>
@@ -157,25 +157,25 @@
             </div>
             <div class="rental-container container">
                 <div class="box">
-                    <img src="img/rental1.png" alt="Truck Rental">
+                    <img src="img/rental1.webp" alt="Truck Rental">
                     <h3>Trucks</h3>
                     <p>Reliable and spacious trucks for all your transport needs.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
-                    <img src="img/rental2.png" alt="Car Rental">
+                    <img src="img/rental2.webp" alt="Car Rental">
                     <h3>Cars</h3>
                     <p>Comfortable and stylish cars for every journey.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
-                    <img src="img/rental3.png" alt="Mini Van Rental">
+                    <img src="img/rental3.webp" alt="Mini Van Rental">
                     <h3>Mini Vans</h3>
                     <p>Spacious and convenient mini vans for family trips.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
                 </div>
                 <div class="box">
-                    <img src="img/rental4.png" alt="Motorcycle Rental">
+                    <img src="img/rental4.webp" alt="Motorcycle Rental">
                     <h3>Motorcycles</h3>
                     <p>Exciting and agile motorcycles for adventurous rides.</p>
                     <a href="#" class="rental-btn">Rent Now</a>
