style: Update social media links in footer

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                 <div class="footer-box">
                     <a href="#" class="logo">Car<span>World</span></a>
                     <div class="social">
-                        <a href="#"><i class='bx bxl-instagram'></i></a>
-                        <a href="#"><i class='bx bxl-twitter'></i></a>
-                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#" alt="instagram link"><i class='bx bxl-instagram'></i></a>
+                        <a href="#" alt="twitter link"><i class='bx bxl-twitter'></i></a>
+                        <a href="#" alt="facebook link"><i class='bx bxl-facebook'></i></a>
                     </div>
                 </div>
                 <div class="footer-box">
