Update about us section image format to webp for better performance

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="about-us-img">
-                    <img src="img/about-us3.png" width="600" height="500" alt="About Us Image">
+                    <img src="img/about-us3.webp" width="600" height="500" alt="About Us Image">
                 </div>
             </div>
         </section>
