style: Update social media links in footer

--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
                 <div class="footer-box">
                     <a href="#" class="logo">Car<span>World</span></a>
                     <div class="social">
-                        <a href="#" alt="instagram link"><i class='bx bxl-instagram'></i></a>
-                        <a href="#" alt="twitter link"><i class='bx bxl-twitter'></i></a>
-                        <a href="#" alt="facebook link"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com" aria-label="Instagram link"><i
+                                class='bx bxl-instagram'></i></a>
+                        <a href="https://www.twitter.com" aria-label="Twitter link"><i class='bx bxl-twitter'></i></a>
+                        <a href="https://www.facebook.com" aria-label="Facebook link"><i
+                                class='bx bxl-facebook'></i></a>
                     </div>
                 </div>
                 <div class="footer-box">
